--- a/_config.yml
+++ b/_config.yml
@@ -67,6 +67,22 @@ shipcloud:
             - 
               name: Cash on delivery
               key: cash_on_delivery
+          field_lengths:
+            - first_name: 0 - 30 caracters
+            - last_name: 1 - 25 characters
+            - company: 2 - 50 characters
+            - care_of: 0 - 50 characters
+            - street: 1 - 27 characters
+            - street_no: 0 - 5 characters
+            - zip_code: (country specific checks by carrier)
+            - city: 1 - 30 characters
+            # - foo: {
+            #   a: b
+            # }
+          label_sizes:
+            - 
+              name: DIN A5
+              key: A5
           package_types:
             - 
               name: Bulk
@@ -92,6 +108,22 @@ shipcloud:
             - 
               name: Next Day Delivery
               key: hermes_next_day
+          field_lengths:
+            - first_name: 0 - 20 characters
+            - last_name: 1 - 30 characters
+            - company: 0 - 20 characters
+            - care_of: 0 - 20 characters
+            - street: 1 - 27 characters
+            - street_no: 1 - 5 characters
+            - zip_code: 1 - 8 characters
+            - city: 1 - 30 characters
+          label_sizes:
+            - 
+              name: DIN A5
+              key: A5
+            - 
+              name: DIN A6
+              key: A6
           package_types:
             - 
               name: Bulk
@@ -101,16 +133,13 @@ shipcloud:
               key: parcel
           services:
             - 
-              name: ReturnsX
+              name: Returns
               key: returns
             - 
               name: Standard
               key: standard
-            - 
-              name: Express
-              key: one_day
         supported_services:
-    as_keys_array: '"standard", "one_day" , "one_day_early", "cargo_international_express", "ups_express_1200", "dhl_europaket", "returns"'
+          as_keys_array: '"standard", "one_day" , "one_day_early", "cargo_international_express", "ups_express_1200", "dhl_europaket", "returns"'
 
 # Build settings
 markdown: kramdown
